--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html lang="en">
 <head>
+    <title>Document</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="icon" href="./assets/img/favicon.ico"/>
+    <img src="./assets/img/Myfoto.jpg" alt="Myfotonew.jpg"/>
+    <style>
+    body {
+        background-image: url("./assets/img/back.jpg")
+    }
+    </style>
 </head>
 <body>
     <section>
