fix:add corrections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
  <body class="b">
   <div class="div">
-   <main>
     <section>
       <header>
           <h1 class="CV">CV students Rs-school</h1>
@@ -28,6 +27,7 @@
         <img class="image" src="./assets/img/htmlfoto.png" alt="htmlfoto.png">
         <h2>Malashenkov Stanislav</h2>
     </section>
+   <main>
         <article id="Contactsforcommunication">
         <h2>Contacts for communication</h2></article>
       <ul>
@@ -58,13 +58,11 @@
         <article id="Education">
         <h2>Education</h2></article>
       <ul>
-       <li>Higher education ,Belarusian State University of Transport</li>
-        <li>
-         <ul>
-          <li>Faculty of Industrial and Civil Engineering</li>
-         </ul>
-        </li>
-      </ul>
+       <li>Higher education ,Belarusian State University of Transport
+        <ul>
+         <li>Faculty of Industrial and Civil Engineering</li>
+         </ul></li>
+        </ul>
         <article id="Experience">
         <h2>Experience</h2></article>
       <ul>
@@ -77,13 +75,13 @@
        <li>Russian</li>
        <li>English Beginner (Self-study)</li>
       </ul>
-       <footer>
-        <nav><a class="nav-link" href="https://f0und8r.github.io/rsschool-cv/cv" target="_blank">My CV Markdown</a>
-             <a class="nav-link" href="https://github.com/f0und8r" target="_blank">My account github</a></nav>
-            <p><a href="https://rs.school/courses/javascript-preschool-ru" target="_blank"><img class="image" src="https://habrastorage.org/getpro/moikrug/uploads/education_platform/000/000/238/logo/medium_e5d23457efbcca5b52e81b80601bf205.png" alt="htmlfoto.png"></a></p>
-            <p>© 2024</p>
-      </footer>
-    </main>
+   </main>
+    <footer>
+    <nav><a class="nav-link" href="https://f0und8r.github.io/rsschool-cv/cv" target="_blank">My CV Markdown</a>
+         <a class="nav-link" href="https://github.com/f0und8r" target="_blank">My account github</a></nav>
+        <p><a href="https://rs.school/courses/javascript-preschool-ru" target="_blank"><img class="image" src="https://habrastorage.org/getpro/moikrug/uploads/education_platform/000/000/238/logo/medium_e5d23457efbcca5b52e81b80601bf205.png" alt="htmlfoto.png"></a></p>
+        <p>© 2024</p>
+    </footer>
   </div>
  </body>
 </html>
